--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "autoprefixer": "^7.1.5",
     "babel-runtime": "6.26.0",
+    "bulma": "^0.5.3",
+    "bulma-slider": "^0.0.2",
+    "extract-text-webpack-plugin": "^3.0.1",
     "global": "^4.3.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-toolbox": "^2.0.0-beta.12",
+    "save": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
