--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "autoprefixer": "^7.1.5",
     "babel-runtime": "6.26.0",
-    "bulma": "^0.5.3",
+    "bulma": "^0.6.0",
+    "bulma-calendar": "^0.0.3",
     "bulma-slider": "^0.0.2",
     "extract-text-webpack-plugin": "^3.0.1",
     "global": "^4.3.2",
