--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   },
   "dependencies": {
     "babel-runtime": "6.26.0",
+    "bulma": "^0.6.0",
+    "bulma-calendar": "^0.0.3",
+    "bulma-extensions": "^0.0.3",
+    "bulma-slider": "^0.0.2",
     "global": "^4.3.2",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "save": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
